# python-tripleoclient

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  CONTRIBUTING.rst  README.rst  bindep.txt  jenkins-config.yml  lower-constraints.txt  other-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
config-generator/: minion.conf  standalone.conf  undercloud.conf
doc/: requirements.txt
doc/source/: commands.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
doc/source/command-objects/: baremetal.rst  overcloud.rst  undercloud.rst
rdomanager_oscplugin/: __init__.py  exceptions.py  plugin.py  utils.py
rdomanager_oscplugin/tests/: base.py  test_rdomanager_oscplugin.py  test_util.py  test_utils.py
rdomanager_oscplugin/tests/v1/: test_plugin.py  utils.py
rdomanager_oscplugin/v1/: baremetal.py  overcloud_deploy.py  overcloud_image.py  overcloud_node.py  overcloud_postconfig.py  overcloud_scale.py  overcloud_update.py  overcloud_validate.py  undercloud.py  util.py
rdomanager_oscplugin/v1/plugin/: undercloud.py
releasenotes/notes/: 5.8.0-9f2df7e7dfcfbc42.yaml  Add_parameters_and_create-vars-file_arguments_to_the_list_subcommand-2e0944e5440c4216.yaml  Allow-running-validations-by-name-using-Ansible-by-default-2dac0dfd9c7a4690.yaml  Swift-encryption-for-the-undercloud-9d9e62205fc54531.yaml  TLS-by-default-for-undercloud_config-f8cdcf206de51b3c.yaml  add-architecture-option-1fca9e53bd59d353.yaml  add-check-for-disable-upgrade-deployment-flag-f074554e47e85b27.yaml  add-enable_neutron_heat-8d799d8ffc76f6da.yaml  add-fencing-parameter-generation-c0ae21e0fee4f350.yaml  add-ffu-cli-48e6039749f1fcdb.yaml  add-frr-service-option-71c20b6512f435dc.yaml  add-heat-type-cli-arg-2fa4f47a835aafea.yaml  add-ipa-cleanup-to-overcloud-delete-ab5835b098805d45.yaml  add-ironic-bios-interface-3fdd5587a60fdb31.yaml  add-ironic-inspect-interface-90b6ff6cfc052eb4.yaml  add-network-unprovision-overcloud-delete-5c36ff706ab809ea.yaml  add-networks-data-support-to-standalone-c06e29b44f44b6d5.yaml  add-node-unprovision-overcloud-delete-c7dd063912d4ebca.yaml  add-platform-option-97d92380b9ff52f1.yaml  add-roles-and-networks-answers-f23927c9075c7e99.yaml  add-skip-tags-overcloud-upgrade-run-6aaf5925ffc02359.yaml  add-uc-reproduce-command-65daa4386142fcd1.yaml  add-undercloud_enable_selinux-configuration-67d2fb994496ef16.yaml  add-user-confirmation-to-node-delete-ca8c240bfd71c0ba.yaml  add_limit_args_for_admin_authorize-2fe6945515dd34a7.yaml  add_save_swift_parameter_to_undercloud_backup-894e0bb4b3562a78.yaml  admin_authorize_deprecate-overcloud-ssh-network-a2a1bdf745c4796c.yaml  allow-running-validations-with-custom-extra-variables-12c7277b30eb791d.yaml  ansible-default-config-920461117f0bd427.yaml  ansible-forks-arg-9f7b439e4b6980dd.yaml  ansible_connection_timeout-78e45f20ff91f672.yaml  block-uc-upgrade-for-network-plugin-change-ba8459b171b8e37e.yaml  boot_mode-ef25d1a032dcae56.yaml  bug-1743575-dcacfa668eaf51a6.yaml  bug-1996567-d45f9a25c31c14d2.yaml  bulk-status-missing-50cc60281c6e20f5.yaml  capture-environment-status-and-logs-5f7f0f287d8465c5.yaml  ceph_daemon_option-47a75a2c8b5ce5bb.yaml  ceph_user_disable_and_re_enable-18f3102031a802d0.yaml  ceph_vip_provisioning-dcac72d62c70c57c.yaml  (+202 more)
releasenotes/source/: conf.py  index.rst
templates/ephemeral-heat/: heat-pod.yaml.j2  heat.conf.j2
tripleoclient/: __init__.py  command.py  constants.py  exceptions.py  export.py  fake_keystone.py  heat_launcher.py  noauth_policy.json  plugin.py  utils.py
tripleoclient/config/: base.py  minion.py  standalone.py  undercloud.py
tripleoclient/releasenotes/notes/: healthcheck_disabled-d0878072273d1496.yaml
tripleoclient/tests/: base.py  fakes.py  test_export.py  test_heat_launcher.py  test_overcloud_credentials.py  test_plugin.py  test_rdomanager_oscplugin.py  test_tripleoclient.py  test_utils.py
tripleoclient/tests/config/: test_config_base.py  test_config_minion.py  test_config_standalone.py  test_config_undercloud.py
tripleoclient/tests/fixture_data/: deployment.py
tripleoclient/tests/v1/: test_container_image.py  test_overcloud_admin.py  test_overcloud_bios.py  test_overcloud_cell.py  test_overcloud_export.py  test_overcloud_export_ceph.py  test_overcloud_parameters.py  test_overcloud_plan.py  test_overcloud_plan_roles.py  test_overcloud_profiles.py  test_overcloud_raid.py  test_plugin.py  test_tripleo_config.py  test_tripleo_validator.py  test_validator.py  utils.py
tripleoclient/tests/v1/baremetal/: fakes.py  (+1 more)
tripleoclient/tests/workflows/: test_baremetal.py  test_base.py  test_deployment.py  test_parameters.py  test_plan_management.py  test_support.py  test_undercloud_backup.py  test_validations.py
tripleoclient/v1/: baremetal.py  container_image.py  minion_config.py  mock_clouds_yaml.py  overcloud_admin.py  overcloud_backup.py  overcloud_bios.py  overcloud_cell.py  overcloud_ceph_upgrade.py  overcloud_config.py  overcloud_credentials.py  overcloud_delete.py  overcloud_deploy.py  overcloud_execute.py  overcloud_export.py  overcloud_export_ceph.py  overcloud_external_update.py  overcloud_external_upgrade.py  overcloud_ffwd_upgrade.py  overcloud_image.py  overcloud_netenv_validate.py  overcloud_node.py  overcloud_parameters.py  overcloud_plan.py  overcloud_plan_roles.py  overcloud_profiles.py  overcloud_raid.py  overcloud_restore.py  overcloud_roles.py  overcloud_support.py  overcloud_update.py  overcloud_upgrade.py  tripleo_config.py  tripleo_container_image.py  tripleo_deploy.py  tripleo_launch_heat.py  tripleo_upgrade.py  tripleo_validator.py  undercloud.py  undercloud_backup.py  (+4 more)
tripleoclient/v2/: overcloud_ceph.py  overcloud_delete.py  overcloud_network.py  overcloud_node.py  overcloud_support.py  tripleo_container_image.py  undercloud_backup.py
tripleoclient/workflows/: baremetal.py  base.py  deployment.py  package_update.py  parameters.py  plan_management.py  roles.py  scale.py  stack_management.py  support.py  templates.py  tripleo_baremetal.py  undercloud_backup.py  validations.py
zuul.d/: layout.yaml
(+70 files in other folders)
