[metadata]
name = python-tripleoclient
summary = TripleO client
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-tripleoclient/latest/
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tripleoclient

[wheel]
universal = 1

[compile_catalog]
directory = tripleoclient/locale
domain = tripleoclient

[update_catalog]
domain = tripleoclient
output_dir = tripleoclient/locale
input_file = tripleoclient/locale/tripleoclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tripleoclient/locale/tripleoclient.pot

[entry_points]
openstack.cli.extension =
    tripleoclient = tripleoclient.plugin

openstack.tripleoclient.v1 =
    tripleo_deploy = tripleoclient.v1.tripleo_deploy:Deploy
    tripleo_upgrade = tripleoclient.v1.tripleo_upgrade:Upgrade
    overcloud_netenv_validate = tripleoclient.v1.overcloud_netenv_validate:ValidateOvercloudNetenv
    overcloud_config_download = tripleoclient.v1.overcloud_config:DownloadConfig
    overcloud_container_image_upload = tripleoclient.v1.container_image:UploadImage
    overcloud_container_image_build = tripleoclient.v1.container_image:BuildImage
    overcloud_container_image_prepare = tripleoclient.v1.container_image:PrepareImageFiles
    overcloud_container_image_tag_discover = tripleoclient.v1.container_image:DiscoverImageTag
    overcloud_delete = tripleoclient.v1.overcloud_delete:DeleteOvercloud
    overcloud_credentials = tripleoclient.v1.overcloud_credentials:OvercloudCredentials
    overcloud_deploy = tripleoclient.v1.overcloud_deploy:DeployOvercloud
    overcloud_image_build = tripleoclient.v1.overcloud_image:BuildOvercloudImage
    overcloud_image_upload = tripleoclient.v1.overcloud_image:UploadOvercloudImage
    overcloud_node_configure = tripleoclient.v1.overcloud_node:ConfigureNode
    overcloud_node_delete = tripleoclient.v1.overcloud_node:DeleteNode
    overcloud_node_import = tripleoclient.v1.overcloud_node:ImportNode
    overcloud_node_introspect = tripleoclient.v1.overcloud_node:IntrospectNode
    overcloud_node_provide = tripleoclient.v1.overcloud_node:ProvideNode
    overcloud_node_discover = tripleoclient.v1.overcloud_node:DiscoverNode
    overcloud_node_clean = tripleoclient.v1.overcloud_node:CleanNode
    overcloud_parameters_set = tripleoclient.v1.overcloud_parameters:SetParameters
    overcloud_plan_create = tripleoclient.v1.overcloud_plan:CreatePlan
    overcloud_plan_delete = tripleoclient.v1.overcloud_plan:DeletePlan
    overcloud_plan_deploy = tripleoclient.v1.overcloud_plan:DeployPlan
    overcloud_plan_list = tripleoclient.v1.overcloud_plan:ListPlans
    overcloud_plan_export = tripleoclient.v1.overcloud_plan:ExportPlan
    overcloud_profiles_match = tripleoclient.v1.overcloud_profiles:MatchProfiles
    overcloud_profiles_list = tripleoclient.v1.overcloud_profiles:ListProfiles
    overcloud_raid_create = tripleoclient.v1.overcloud_raid:CreateRAID
    overcloud_role_show= tripleoclient.v1.overcloud_roles:RoleShow
    overcloud_role_list = tripleoclient.v1.overcloud_roles:RoleList
    overcloud_roles_generate = tripleoclient.v1.overcloud_roles:RolesGenerate
    overcloud_roles_list = tripleoclient.v1.overcloud_plan_roles:ListRoles
    overcloud_roles_show = tripleoclient.v1.overcloud_plan_roles:ShowRole
    overcloud_support_report_collect = tripleoclient.v1.overcloud_support:ReportExecute
    overcloud_update_prepare= tripleoclient.v1.overcloud_update:UpdatePrepare
    overcloud_update_run = tripleoclient.v1.overcloud_update:UpdateRun
    overcloud_update_converge= tripleoclient.v1.overcloud_update:UpdateConverge
    overcloud_upgrade_prepare = tripleoclient.v1.overcloud_upgrade:UpgradePrepare
    overcloud_upgrade_run = tripleoclient.v1.overcloud_upgrade:UpgradeRun
    overcloud_upgrade_converge = tripleoclient.v1.overcloud_upgrade:UpgradeConvergeOvercloud
    overcloud_ceph-upgrade_run = tripleoclient.v1.overcloud_ceph_upgrade:CephUpgrade
    overcloud_ffwd-upgrade_prepare = tripleoclient.v1.overcloud_ffwd_upgrade:FFWDUpgradePrepare
    overcloud_ffwd-upgrade_run = tripleoclient.v1.overcloud_ffwd_upgrade:FFWDUpgradeRun
    overcloud_ffwd-upgrade_converge = tripleoclient.v1.overcloud_ffwd_upgrade:FFWDUpgradeConverge
    overcloud_execute = tripleoclient.v1.overcloud_execute:RemoteExecute
    overcloud_generate_fencing = tripleoclient.v1.overcloud_parameters:GenerateFencingParameters
    undercloud_deploy = tripleoclient.v1.undercloud_deploy:DeployUndercloud
    undercloud_install = tripleoclient.v1.undercloud:InstallUndercloud
    undercloud_upgrade = tripleoclient.v1.undercloud:UpgradeUndercloud
    undercloud_backup = tripleoclient.v1.undercloud_backup:BackupUndercloud
oslo.config.opts =
    undercloud_config  = tripleoclient.v1.undercloud_config:list_opts
    standalone_config  = tripleoclient.config.standalone:list_opts
