[metadata]
name = python-tripleoclient
summary = TripleO client
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-tripleoclient/latest/
python-requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    tripleoclient

[compile_catalog]
directory = tripleoclient/locale
domain = tripleoclient

[update_catalog]
domain = tripleoclient
output_dir = tripleoclient/locale
input_file = tripleoclient/locale/tripleoclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tripleoclient/locale/tripleoclient.pot

[entry_points]
openstack.cli.extension =
    tripleoclient = tripleoclient.plugin

openstack.tripleoclient.v2 =
    tripleo_config_generate_ansible = tripleoclient.v1.tripleo_config:GenerateAnsibleConfig
    tripleo_deploy = tripleoclient.v1.tripleo_deploy:Deploy
    tripleo_launch_heat = tripleoclient.v1.tripleo_launch_heat:LaunchHeat
    tripleo_upgrade = tripleoclient.v1.tripleo_upgrade:Upgrade
    overcloud_admin_authorize = tripleoclient.v1.overcloud_admin:Authorize
    overcloud_netenv_validate = tripleoclient.v1.overcloud_netenv_validate:ValidateOvercloudNetenv
    overcloud_cell_export = tripleoclient.v1.overcloud_cell:ExportCell
    overcloud_config_download = tripleoclient.v1.overcloud_config:DownloadConfig
    overcloud_container_image_upload = tripleoclient.v1.container_image:UploadImage
    overcloud_container_image_build = tripleoclient.v1.container_image:BuildImage
    overcloud_container_image_prepare = tripleoclient.v1.container_image:PrepareImageFiles
    overcloud_container_image_tag_discover = tripleoclient.v1.container_image:DiscoverImageTag
    overcloud_delete = tripleoclient.v2.overcloud_delete:DeleteOvercloud
    overcloud_credentials = tripleoclient.v1.overcloud_credentials:OvercloudCredentials
    overcloud_deploy = tripleoclient.v1.overcloud_deploy:DeployOvercloud
    overcloud_export = tripleoclient.v1.overcloud_export:ExportOvercloud
    overcloud_status = tripleoclient.v1.overcloud_deploy:GetDeploymentStatus
    overcloud_image_build = tripleoclient.v1.overcloud_image:BuildOvercloudImage
    overcloud_image_upload = tripleoclient.v1.overcloud_image:UploadOvercloudImage
    overcloud_node_configure = tripleoclient.v1.overcloud_node:ConfigureNode
    overcloud_node_delete = tripleoclient.v1.overcloud_node:DeleteNode
    overcloud_node_import = tripleoclient.v2.overcloud_node:ImportNode
    overcloud_node_introspect = tripleoclient.v2.overcloud_node:IntrospectNode
    overcloud_node_provide = tripleoclient.v1.overcloud_node:ProvideNode
    overcloud_node_discover = tripleoclient.v1.overcloud_node:DiscoverNode
    overcloud_node_clean = tripleoclient.v1.overcloud_node:CleanNode
    overcloud_node_bios_configure = tripleoclient.v1.overcloud_bios:ConfigureBIOS
    overcloud_node_bios_reset = tripleoclient.v1.overcloud_bios:ResetBIOS
    overcloud_node_provision = tripleoclient.v2.overcloud_node:ProvisionNode
    overcloud_node_unprovision = tripleoclient.v2.overcloud_node:UnprovisionNode
    overcloud_parameters_set = tripleoclient.v1.overcloud_parameters:SetParameters
    overcloud_plan_create = tripleoclient.v1.overcloud_plan:CreatePlan
    overcloud_plan_delete = tripleoclient.v1.overcloud_plan:DeletePlan
    overcloud_plan_deploy = tripleoclient.v1.overcloud_plan:DeployPlan
    overcloud_plan_list = tripleoclient.v1.overcloud_plan:ListPlans
    overcloud_plan_export = tripleoclient.v1.overcloud_plan:ExportPlan
    overcloud_profiles_match = tripleoclient.v1.overcloud_profiles:MatchProfiles
    overcloud_profiles_list = tripleoclient.v1.overcloud_profiles:ListProfiles
    overcloud_raid_create = tripleoclient.v1.overcloud_raid:CreateRAID
    overcloud_role_show= tripleoclient.v1.overcloud_roles:RoleShow
    overcloud_role_list = tripleoclient.v1.overcloud_roles:RoleList
    overcloud_roles_generate = tripleoclient.v1.overcloud_roles:RolesGenerate
    overcloud_roles_list = tripleoclient.v1.overcloud_plan_roles:ListRoles
    overcloud_roles_show = tripleoclient.v1.overcloud_plan_roles:ShowRole
    overcloud_support_report_collect = tripleoclient.v2.overcloud_support:ReportExecute
    overcloud_update_prepare= tripleoclient.v1.overcloud_update:UpdatePrepare
    overcloud_update_run = tripleoclient.v1.overcloud_update:UpdateRun
    overcloud_update_converge= tripleoclient.v1.overcloud_update:UpdateConverge
    overcloud_upgrade_prepare = tripleoclient.v1.overcloud_upgrade:UpgradePrepare
    overcloud_upgrade_run = tripleoclient.v1.overcloud_upgrade:UpgradeRun
    overcloud_upgrade_converge = tripleoclient.v1.overcloud_upgrade:UpgradeConvergeOvercloud
    overcloud_external-update_run = tripleoclient.v1.overcloud_external_update:ExternalUpdateRun
    overcloud_external-upgrade_run = tripleoclient.v1.overcloud_external_upgrade:ExternalUpgradeRun
    overcloud_ffwd-upgrade_prepare = tripleoclient.v1.overcloud_ffwd_upgrade:FFWDUpgradePrepare
    overcloud_ffwd-upgrade_run = tripleoclient.v1.overcloud_ffwd_upgrade:FFWDUpgradeRun
    overcloud_ffwd-upgrade_converge = tripleoclient.v1.overcloud_ffwd_upgrade:FFWDUpgradeConverge
    overcloud_generate_fencing = tripleoclient.v1.overcloud_parameters:GenerateFencingParameters
    tripleo_container_image_delete = tripleoclient.v1.container_image:TripleOContainerImageDelete
    tripleo_container_image_list = tripleoclient.v1.container_image:TripleOContainerImageList
    tripleo_container_image_show = tripleoclient.v1.container_image:TripleOContainerImageShow
    tripleo_container_image_push = tripleoclient.v1.container_image:TripleOContainerImagePush
    tripleo_container_image_prepare = tripleoclient.v1.container_image:TripleOImagePrepare
    tripleo_container_image_prepare_default = tripleoclient.v1.container_image:TripleOImagePrepareDefault
    undercloud_install = tripleoclient.v1.undercloud:InstallUndercloud
    undercloud_upgrade = tripleoclient.v1.undercloud:UpgradeUndercloud
    undercloud_minion_install = tripleoclient.v1.undercloud_minion:InstallUndercloudMinion
    undercloud_minion_upgrade = tripleoclient.v1.undercloud_minion:UpgradeUndercloudMinion
    undercloud_backup = tripleoclient.v2.undercloud_backup:BackupUndercloud
    tripleo_validator_group_info = tripleoclient.v1.tripleo_validator:TripleOValidatorGroupInfo
    tripleo_validator_list = tripleoclient.v1.tripleo_validator:TripleOValidatorList
    tripleo_validator_run = tripleoclient.v1.tripleo_validator:TripleOValidatorRun
    tripleo_validator_show = tripleoclient.v1.tripleo_validator:TripleOValidatorShow
    tripleo_validator_show_history = tripleoclient.v1.tripleo_validator:TripleOValidatorShowHistory
    tripleo_validator_show_parameter = tripleoclient.v1.tripleo_validator:TripleOValidatorShowParameter
    tripleo_validator_show_run = tripleoclient.v1.tripleo_validator:TripleOValidatorShowRun

oslo.config.opts =
    undercloud_config  = tripleoclient.config.undercloud:list_opts
    standalone_config  = tripleoclient.config.standalone:list_opts
    minion_config  = tripleoclient.config.minion:list_opts
